kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iotdb-cloud-portal
  labels:
    app: iotdb-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iotdb-cloud
      module: manager
  template:
    metadata:
      labels:
        app: iotdb-cloud
        module: manager
    spec:
      serviceAccountName: iotdb-manager
      containers:
        - name: portal
          image: jfeinauer/iotdb-cloud:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iotdb-cloud-beat
  labels:
    app: iotdb-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iotdb-cloud
  template:
    metadata:
      labels:
        app: iotdb-cloud
    spec:
      serviceAccountName: iotdb-manager
      containers:
        - name: portal
          image: jfeinauer/iotdb-cloud:latest
          imagePullPolicy: Always
          args:
            - "celery-beat"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iotdb-cloud-worker
  labels:
    app: iotdb-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iotdb-cloud
  template:
    metadata:
      labels:
        app: iotdb-cloud
    spec:
      serviceAccountName: iotdb-manager
      containers:
        - name: portal
          image: jfeinauer/iotdb-cloud:latest
          imagePullPolicy: Always
          args:
            - "celery-worker"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: iotdb-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iotdb-cloud
      service: redis
  template:
    metadata:
      labels:
        app: iotdb-cloud
        service: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: iotdb-cloud
    service: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: iotdb-cloud-manager
spec:
  selector:
    app: iotdb-cloud
    module: manager
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
